--- a/src/index.html
+++ b/src/index.html
@@ -37,29 +37,57 @@
             <div class="promo__wrapper">
                 <h1 class="promo__header">Подбор пульсометра</h1>
                 <h2 class="promo__sabheader">с учётом Вашего уровня подготовки</h2>
-                <div class="promo__inons">
-                    <div class="promo__inon">
+                <div class="promo__icons">
+                    <div class="promo__icon">
                         <img src="icon/clock.png" alt="clock">Время подбора:
                         10 минут
                     </div>
-                    <div class="promo__inon">
+                    <div class="promo__icon">
                         <img src="icon/delivery.png" alt="delivery">Бесплатная
                         доставка
                     </div>
-                    <div class="promo__inon">
+                    <div class="promo__icon">
                         <img src="icon/mess.png" alt="mess">Ответимна
                         на все вопросы
                     </div>
                 </div>
-                <!-- /promo__inons -->
+                <!-- /promo__icons -->
                 <button class="button button_main">заказать консультацию</button>
                 <div class="promo__link">
                     или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
             </div>
+            <!-- /promo__wrapper -->
         </div>
     </div>
+    <!-- /promo -->
+    <div class="benefits">
+        <div class="container">
+            <div class="benefits__wrapper">
+                <div class="benefits__title">НАШИ ПРЕИМУЩЕСТВА</div>
+                <div class="benefits__items">
+                    <div class="benefits__item">
+                        <img src="icon/cup.png" alt="cup" class="benefits__img">
+                        <div class="benefits__subtittle">Делимся опытом</div>
+                        <div class="benefits__desc">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                    </div>
+                    <div class="benefits__item">
+                        <img src="icon/heart.png" alt="heart" class="benefits__img">
+                        <div class="benefits__subtittle">Заботимся о здоровье</div>
+                        <div class="benefits__desc">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                    </div>
+                    <div class="benefits__item">
+                        <img src="icon/shoe.png" alt="shoe" class="benefits__img">
+                        <div class="benefits__subtittle">Учим бегать</div>
+                        <div class="benefits__desc">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+                    </div>
+                </div>
+            </div>
+            <!-- /benefits__wrapper -->
+        </div>
+    </div>
+    <!-- /benefits -->
 </body>
 
 </html>
