--- a/src/index.html
+++ b/src/index.html
@@ -1,93 +1,148 @@
 <!DOCTYPE html>
 <html lang="ru">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;700&display=swap"
         rel="stylesheet"> -->
 
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/style.min.css">
-</head>
+        <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
+        <link rel="stylesheet" href="css/fonts.css" />
+        <link rel="stylesheet" href="css/style.min.css" />
+    </head>
 
-<body>
-    <div class="promo">
-        <div class="container">
-            <header class="header">
-                <a href="#" class="header__logo">
-                    <img src="icon/logo.png" alt="logo">
-                </a>
-                <div class="header__official">
-                    Официальный представитель
-                    <span>Garmin, Polar, Suunto</span>
-                </div>
-                <div class="header__contacts">
-                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button">заказать звонок</button>
-                </div>
-            </header>
-            <!-- /.header -->
-            <div class="promo__wrapper">
-                <h1 class="promo__header">Подбор пульсометра</h1>
-                <h2 class="promo__sabheader">с учётом Вашего уровня подготовки</h2>
-                <div class="promo__icons">
-                    <div class="promo__icon">
-                        <img src="icon/clock.png" alt="clock">Время подбора:
-                        10 минут
+    <body>
+        <div class="promo">
+            <div class="container">
+                <header class="header">
+                    <a href="#" class="header__logo">
+                        <img src="icon/logo.png" alt="logo" />
+                    </a>
+                    <div class="header__official">
+                        Официальный представитель
+                        <span>Garmin, Polar, Suunto</span>
                     </div>
-                    <div class="promo__icon">
-                        <img src="icon/delivery.png" alt="delivery">Бесплатная
-                        доставка
+                    <div class="header__contacts">
+                        <a href="tel:+74999228974" class="header__phone"
+                            >+7 (499) 922-89-74</a
+                        >
+                        <button class="button">заказать звонок</button>
                     </div>
-                    <div class="promo__icon">
-                        <img src="icon/mess.png" alt="mess">Ответимна
-                        на все вопросы
+                </header>
+                <!-- /.header -->
+                <div class="promo__wrapper">
+                    <h1 class="promo__header">Подбор пульсометра</h1>
+                    <h2 class="promo__sabheader">
+                        с учётом Вашего уровня подготовки
+                    </h2>
+                    <div class="promo__icons">
+                        <div class="promo__icon">
+                            <img src="icon/clock.png" alt="clock" />Время
+                            подбора: 10 минут
+                        </div>
+                        <div class="promo__icon">
+                            <img
+                                src="icon/delivery.png"
+                                alt="delivery"
+                            />Бесплатная доставка
+                        </div>
+                        <div class="promo__icon">
+                            <img src="icon/mess.png" alt="mess" />Ответимна на
+                            все вопросы
+                        </div>
+                    </div>
+                    <!-- /promo__icons -->
+                    <button class="button button_main">
+                        заказать консультацию
+                    </button>
+                    <div class="promo__link">
+                        или
+                        <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
                     </div>
                 </div>
-                <!-- /promo__icons -->
-                <button class="button button_main">заказать консультацию</button>
-                <div class="promo__link">
-                    или
-                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
-                </div>
+                <!-- /promo__wrapper -->
             </div>
-            <!-- /promo__wrapper -->
         </div>
-    </div>
-    <!-- /promo -->
-    <div class="benefits">
-        <div class="container">
-            <div class="benefits__wrapper">
-                <div class="benefits__title">НАШИ ПРЕИМУЩЕСТВА</div>
-                <div class="benefits__items">
-                    <div class="benefits__item">
-                        <img src="icon/cup.png" alt="cup" class="benefits__img">
-                        <div class="benefits__subtittle">Делимся опытом</div>
-                        <div class="benefits__desc">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
-                    </div>
-                    <div class="benefits__item">
-                        <img src="icon/heart.png" alt="heart" class="benefits__img">
-                        <div class="benefits__subtittle">Заботимся о здоровье</div>
-                        <div class="benefits__desc">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
-                    </div>
-                    <div class="benefits__item">
-                        <img src="icon/shoe.png" alt="shoe" class="benefits__img">
-                        <div class="benefits__subtittle">Учим бегать</div>
-                        <div class="benefits__desc">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+        <!-- /promo -->
+        <div class="benefits">
+            <div class="container">
+                <div class="benefits__wrapper">
+                    <div class="benefits__title">НАШИ ПРЕИМУЩЕСТВА</div>
+                    <div class="benefits__items">
+                        <div class="benefits__item">
+                            <img
+                                src="icon/cup.png"
+                                alt="cup"
+                                class="benefits__img"
+                            />
+                            <div class="benefits__subtittle">
+                                Делимся опытом
+                            </div>
+                            <div class="benefits__desc">
+                                Наши сотрудники всегда готовы поделиться своим
+                                опытом, так как сами бегают полумарафоны,
+                                переплыли Босфор, готовятся к соревнованиям по
+                                триатлону!
+                            </div>
+                        </div>
+                        <div class="benefits__item">
+                            <img
+                                src="icon/heart.png"
+                                alt="heart"
+                                class="benefits__img"
+                            />
+                            <div class="benefits__subtittle">
+                                Заботимся о здоровье
+                            </div>
+                            <div class="benefits__desc">
+                                Мы работаем для того, чтобы Ваши занятия спортом
+                                шли на пользу Вашему здоровью и были в радость
+                                Вам и Вашим близким!
+                            </div>
+                        </div>
+                        <div class="benefits__item">
+                            <img
+                                src="icon/shoe.png"
+                                alt="shoe"
+                                class="benefits__img"
+                            />
+                            <div class="benefits__subtittle">Учим бегать</div>
+                            <div class="benefits__desc">
+                                Помогаем с обучением правильной технике бега!
+                                Дружим с крупнейшей школой бега в России -
+                                <a href="#">I LOVE RUNNING.</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <!-- /benefits__wrapper -->
             </div>
-            <!-- /benefits__wrapper -->
         </div>
-    </div>
-    <!-- /benefits -->
-</body>
+        <!-- /benefits -->
+        <div class="consultation">
+            <div class="container">
+                <div class="consultation__title">
+                    Получите бесплатную консультацию<br />
+                    по подбору пульсометра
+                </div>
+                <div class="consultation__descr">
+                    Просто заполните форму заявки<br />
+                    и мы перезвоним вам в течении 10 минут
+                </div>
+                <form class="feed-form" action="#">
+                    <input name="name" required placeholder="Ваше имя" type="text" />
+                    <input name="phone" required placeholder="Ваш телефон" type="number" />
+                    <input name="emaol" required placeholder="Ваш E-mail" type="email" />
 
+                    <button class="button button_submit">заказать консультацию</button>
+                </form>
+            </div>
+        </div>
+        <!-- /consultation -->
+    </body>
 </html>
