--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,18 @@
         <title>Document</title>
 
         <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;700&display=swap"
-        rel="stylesheet"> -->
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;700&display=swap"
+		rel="stylesheet"> -->
 
         <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
         <link rel="stylesheet" href="css/fonts.css" />
+        <link rel="stylesheet" href="css/slick.css" />
         <link rel="stylesheet" href="css/style.min.css" />
     </head>
 
     <body>
-        <div class="promo">
+        <section class="promo">
             <div class="container">
                 <header class="header">
                     <a href="#" class="header__logo">
@@ -67,9 +68,9 @@
                 </div>
                 <!-- /promo__wrapper -->
             </div>
-        </div>
+        </section>
         <!-- /promo -->
-        <div class="benefits">
+        <section class="benefits">
             <div class="container">
                 <div class="benefits__wrapper">
                     <div class="benefits__title">НАШИ ПРЕИМУЩЕСТВА</div>
@@ -122,9 +123,9 @@
                 </div>
                 <!-- /benefits__wrapper -->
             </div>
-        </div>
+        </section>
         <!-- /benefits -->
-        <div class="consultation">
+        <section class="consultation">
             <div class="container">
                 <div class="consultation__title">
                     Получите бесплатную консультацию<br />
@@ -135,14 +136,61 @@
                     и мы перезвоним вам в течении 10 минут
                 </div>
                 <form class="feed-form" action="#">
-                    <input name="name" required placeholder="Ваше имя" type="text" />
-                    <input name="phone" required placeholder="Ваш телефон" type="number" />
-                    <input name="emaol" required placeholder="Ваш E-mail" type="email" />
+                    <input
+                        name="name"
+                        required
+                        placeholder="Ваше имя"
+                        type="text"
+                    />
+                    <input
+                        name="phone"
+                        required
+                        placeholder="Ваш телефон"
+                        type="number"
+                    />
+                    <input
+                        name="email"
+                        required
+                        placeholder="Ваш E-mail"
+                        type="email"
+                    />
 
-                    <button class="button button_submit">заказать консультацию</button>
+                    <button class="button button_submit">
+                        заказать консультацию
+                    </button>
                 </form>
             </div>
-        </div>
+        </section>
         <!-- /consultation -->
+
+        <section class="carousel">
+            <div class="container">
+                <div class="carousel__inner">
+                    <div>
+                        <img src="img/slaid/slaid-1.png" alt="slaid-1" />
+                    </div>
+                    <div>
+                        <img src="img/slaid/slaid-2.png" alt="slaid-2" />
+                    </div>
+                    <div>
+                        <img src="img/slaid/slaid-3.png" alt="slaid-3" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /.carousel -->
+
+        <!-- script -->
+        <script
+            type="text/javascript"
+            src="https://code.jquery.com/jquery-1.11.0.min.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
+        ></script>
+        <script src="js/slick.min.js"></script>
+
+        <script src="js/script.js"></script>
     </body>
 </html>
