--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
 
         <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
         <link rel="stylesheet" href="css/fonts.css" />
-        <link rel="stylesheet" href="css/slick.css" />
+
+        <!-- <link rel="stylesheet" href="css/slick.css" /> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+
         <link rel="stylesheet" href="css/style.min.css" />
     </head>
 
@@ -176,12 +179,15 @@
                         <img src="img/slaid/slaid-3.png" alt="slaid-3" />
                     </div>
                 </div>
+                <button type="button" class="prev"><img src="img/slaid/left.svg"></button>
+                <button type="button" class="next"><img src="img/slaid/right.svg"></button>
             </div>
         </section>
         <!-- /.carousel -->
 
-        <!-- script -->
-        <script
+        <!-- ================ script ================ -->
+        <!-- slick -->
+        <!-- <script
             type="text/javascript"
             src="https://code.jquery.com/jquery-1.11.0.min.js"
         ></script>
@@ -189,7 +195,10 @@
             type="text/javascript"
             src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
         ></script>
-        <script src="js/slick.min.js"></script>
+        <script src="js/slick.min.js"></script> -->
+
+        <!-- Tiny Slider 2 -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 
         <script src="js/script.js"></script>
     </body>
