--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
         <link rel="stylesheet" href="css/fonts.css" />
 
         <!-- <link rel="stylesheet" href="css/slick.css" /> -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
+        />
 
         <link rel="stylesheet" href="css/style.min.css" />
     </head>
@@ -179,11 +182,60 @@
                         <img src="img/slaid/slaid-3.png" alt="slaid-3" />
                     </div>
                 </div>
-                <button type="button" class="prev"><img src="img/slaid/left.svg"></button>
-                <button type="button" class="next"><img src="img/slaid/right.svg"></button>
+                <button type="button" class="prev">
+                    <img src="img/slaid/left.svg" />
+                </button>
+                <button type="button" class="next">
+                    <img src="img/slaid/right.svg" />
+                </button>
             </div>
         </section>
         <!-- /.carousel -->
+
+        <section class="catalog">
+            <div class="container">
+                <div class="catalog__title">Каталог пульсометров</div>
+                <ul class="catalog__tabs">
+                    <li class="catalog__tab catalog__tab_active">
+                        <div>Для фитнеса</div>
+                    </li>
+                    <li class="catalog__tab"><div>для бега</div></li>
+                    <li class="catalog__tab"><div>для триатлона</div></li>
+                </ul>
+                <div class="catalog__content">
+                    <div class="catalog-item">
+                        <img
+                            src="img/pulsometr.png"
+                            alt="pulsometr"
+                            class="catalog-item__img"
+                        />
+                        <div class="catalog-item__subtitle">
+                            Пульсометр Polar FT1
+                        </div>
+                        <div class="catalog-item__descr">
+                            Для первых шагов в тренировках, основанных на
+                            сердечном ритме
+                        </div>
+                        <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        <hr />
+                        <div class="catalog-item__footer">
+                            <div class="catalog-item__pticses">
+                                <div class="catalog-item__old-pticses">
+                                    4 750 руб.
+                                </div>
+                                <div class="catalog-item__pticse">
+                                    4 500 руб.
+                                </div>
+                            </div>
+                            <button class="button button_mini">КУПИТЬ</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="catalog__content"></div>
+                <div class="catalog__content"></div>
+            </div>
+        </section>
+        <!-- /.catalog -->
 
         <!-- ================ script ================ -->
         <!-- slick -->
