--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
 
-        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@300;400;500;700&display=swap"
-		rel="stylesheet"> -->
-
         <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
         <link rel="stylesheet" href="css/fonts.css" />
 
-        <!-- <link rel="stylesheet" href="css/slick.css" /> -->
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
-        />
+        <link rel="stylesheet" href="css/slick.css" />
 
         <link rel="stylesheet" href="css/style.min.css" />
     </head>
@@ -182,12 +173,6 @@
                         <img src="img/slaid/slaid-3.png" alt="slaid-3" />
                     </div>
                 </div>
-                <button type="button" class="prev">
-                    <img src="img/slaid/left.svg" />
-                </button>
-                <button type="button" class="next">
-                    <img src="img/slaid/right.svg" />
-                </button>
             </div>
         </section>
         <!-- /.carousel -->
@@ -202,7 +187,7 @@
                     <li class="catalog__tab"><div>для бега</div></li>
                     <li class="catalog__tab"><div>для триатлона</div></li>
                 </ul>
-                <div class="catalog__content">
+                <div class="catalog__content catalog__content_active">
                     <div class="catalog-item">
                         <div class="catalog-item__wrapper">
                             <div
@@ -541,12 +526,11 @@
                     <!-- /catalog-item -->
                 </div>
                 <!-- /catalog__content -->
+
                 <div class="catalog__content">
                     <div class="catalog-item">
                         <div class="catalog-item__wrapper">
-                            <div
-                                class="catalog-item__content catalog-item__content_active"
-                            >
+                            <div class="catalog-item__content catalog-item__content_active">
                                 <img
                                     src="img/pulsometr.png"
                                     alt="pulsometr"
@@ -599,6 +583,7 @@
                     </div>
                     <!-- /catalog-item -->
                 </div>
+
                 <div class="catalog__content">
                     <div class="catalog-item">
                         <div class="catalog-item__wrapper">
@@ -718,19 +703,11 @@
         <!-- /.catalog -->
 
         <!-- ================ script ================ -->
-        <!-- slick -->
-        <!-- <script
-            type="text/javascript"
-            src="https://code.jquery.com/jquery-1.11.0.min.js"
-        ></script>
         <script
             type="text/javascript"
-            src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
         ></script>
-        <script src="js/slick.min.js"></script> -->
-
-        <!-- Tiny Slider 2 -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+        <script src="js/slick.min.js"></script>
 
         <script src="js/script.js"></script>
     </body>
