--- a/src/index.html
+++ b/src/index.html
@@ -530,7 +530,9 @@
                 <div class="catalog__content">
                     <div class="catalog-item">
                         <div class="catalog-item__wrapper">
-                            <div class="catalog-item__content catalog-item__content_active">
+                            <div
+                                class="catalog-item__content catalog-item__content_active"
+                            >
                                 <img
                                     src="img/pulsometr.png"
                                     alt="pulsometr"
@@ -701,6 +703,104 @@
             </div>
         </section>
         <!-- /.catalog -->
+
+        <section class="reviews">
+            <div class="container">
+                <div class="reviews__title">отзывы клиентов</div>
+                <div class="reviews__items">
+                    <div class="reviews-item">
+                        <div class="reviews-item__round">
+                            <img
+                                src="img/rev/photo_1.png"
+                                alt="avatar"
+                                class="reviews__img"
+                            />
+                        </div>
+                        <div class="reviews-item__rew">
+                            <div class="reviews-item__name">
+                                Ирина Иванченко
+                            </div>
+                            <div class="reviews-item__subt">2 полумарафона</div>
+                            <div class="reviews-item__text">
+                                <p>
+                                    Не знала, что себе купить - обратилась к
+                                    ребятам из RunSmart - подобрали пульсометр,
+                                    который подошёл именно под мои цели и
+                                    финансовые возможности.Через некоторое время
+                                    решила обновить гаджет - не раздумывая
+                                    обратилась туда же.
+                                </p>
+                                <p>Новые цели - новый гаджет!</p>
+                                <p>Спасибо, RunSmart!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="reviews-item">
+                        <div class="reviews-item__round">
+                            <img
+                                src="img/rev/photo_2.png"
+                                alt="avatar"
+                                class="reviews__img"
+                            />
+                        </div>
+                        <div class="reviews-item__rew">
+                            <div class="reviews-item__name">Иван Сёмочкин</div>
+                            <div class="reviews-item__subt">1 полумарафон</div>
+                            <div class="reviews-item__text">
+                                <p>
+                                    Крутая штука-пульсометр. Обычно без них
+                                    бегал. Оказывается только хуже себе делал.
+                                </p>
+                                <p>
+                                    Купил пульсометр, ещё в подарок получил
+                                    тренировку. Со мной вместе провели первую
+                                    тренировку, научили пользоваться новым
+                                    гаджетом. Также объяснили основы анатомии,
+                                    составили план тренировок на месяц вперёд.
+                                </p>
+                                <p>
+                                    С ними подготовился к своему первому
+                                    полумарафону! Спасибо!!!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="reviews-item">
+                        <div class="reviews-item__round">
+                            <img
+                                src="img/rev/photo_3.png"
+                                alt="avatar"
+                                class="reviews__img"
+                            />
+                        </div>
+                        <div class="reviews-item__rew">
+                            <div class="reviews-item__name">Юлия Дашкина</div>
+                            <div class="reviews-item__subt">2 полумарафона</div>
+                            <div class="reviews-item__text">
+                                <p>
+                                    Долго не могла начать бегать, т.к. до этого
+                                    несколько раз начинала, но становилось
+                                    тяжело и я бросала. От друзей услышала о
+                                    RunSmart и о беге с контролем пульса и
+                                    решила попробовать.
+                                </p>
+                                <p>
+                                    Позвонила, ребята поинтересовались моими
+                                    целями и подобрали очень интересный вариант
+                                    со скидкой! Теперь бегаю и наслаждаюсь
+                                    бегом! Пробежала уже 2 полумарафона и
+                                    несколько более коротких забегов и не
+                                    намерена останавливаться!
+                                </p>
+                                <p>Спасибо!!!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /reviews__items -->
+            </div>
+        </section>
+        <!-- /.reviews -->
 
         <!-- ================ script ================ -->
         <script
