--- a/src/index.html
+++ b/src/index.html
@@ -802,6 +802,31 @@
         </section>
         <!-- /.reviews -->
 
+        <footer class="footer">
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A652293dd07f527bc3b63889f1995f0d1d6af0df3fb58de87d4034d69a14547f2&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=true"></script>
+
+            <div class="footer__info">
+                <address class="footer__addr">
+                    Москва, Мясницкий проезд, д.3с1
+                </address>
+                <a class="footer__phone" href="tel:+74999228974"
+                    >8 (499) 922-89-74</a
+                >
+                <div class="footer__social">
+                    <a href="#" class="footer__social-item"
+                        ><img src="icon/facebook.svg" alt="facebook"
+                    /></a>
+                    <a href="#" class="footer__social-item"
+                        ><img src="icon/instagram.svg" alt="instagram"
+                    /></a>
+                    <a href="#" class="footer__social-item"
+                        ><img src="icon/pinterest.svg" alt="pinterest"
+                    /></a>
+                </div>
+            </div>
+        </footer>
+        <!-- /.footer -->
+
         <!-- ================ script ================ -->
         <script
             type="text/javascript"
