--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,9 @@
             <a href="tel:+74999228974" class="header__phone"
               >+7 (499) 922-89-74</a
             >
-            <button class="button" data-modal="consultation">заказать звонок</button>
+            <button class="button" data-modal="consultation">
+              заказать звонок
+            </button>
           </div>
         </header>
         <!-- /.header -->
@@ -48,7 +50,9 @@
             </div>
           </div>
           <!-- /promo__icons -->
-          <button class="button button_main" data-modal="consultation">заказать консультацию</button>
+          <button class="button button_main" data-modal="consultation">
+            заказать консультацию
+          </button>
           <div class="promo__link">
             или
             <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -107,7 +111,7 @@
           Просто заполните форму заявки<br />
           и мы перезвоним вам в течении 10 минут
         </div>
-        <form class="feed-form" action="#">
+        <form id="consultation-form" class="feed-form" action="#">
           <input name="name" required placeholder="Ваше имя" type="text" />
           <input
             name="phone"
@@ -659,14 +663,9 @@
         <div class="modal__subtitle">Просто заполните форму заявки</div>
         <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
         <form class="feed-form feed-form_mt25" action="#">
-          <input name="name" required placeholder="Ваше имя" type="text" />
-          <input
-            name="phone"
-            required
-            placeholder="Ваш телефон"
-            type="number"
-          />
-          <input name="email" required placeholder="Ваш E-mail" type="email" />
+          <input name="name" placeholder="Ваше имя" type="text" />
+          <input name="phone" placeholder="Ваш телефон" type="number" />
+          <input name="email" placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">заказать консультацию</button>
         </form>
@@ -695,7 +694,9 @@
       <div class="modal modal_mini" id="thanks">
         <div class="modal__close">&#10006;</div>
         <div class="modal__subtitle">Спасибо за вашу заявку!</div>
-        <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
+        <div class="modal__descr">
+          Наш менеджер свяжется с вами в ближайшее время!
+        </div>
       </div>
       <!-- /modal order -->
     </div>
@@ -707,10 +708,8 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
     ></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
 
     <script src="js/script.js"></script>
   </body>
 </html>
-
-
-<!-- 25 min -->
