--- a/src/index.html
+++ b/src/index.html
@@ -112,14 +112,9 @@
           и мы перезвоним вам в течении 10 минут
         </div>
         <form id="consultation-form" class="feed-form" action="#">
-          <input name="name" required placeholder="Ваше имя" type="text" />
-          <input
-            name="phone"
-            required
-            placeholder="Ваш телефон"
-            type="number"
-          />
-          <input name="email" required placeholder="Ваш E-mail" type="email" />
+          <input name="name" placeholder="Ваше имя" type="text" />
+          <input name="phone" placeholder="Ваш телефон"/>
+          <input name="email" placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">заказать консультацию</button>
         </form>
@@ -664,7 +659,7 @@
         <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
         <form class="feed-form feed-form_mt25" action="#">
           <input name="name" placeholder="Ваше имя" type="text" />
-          <input name="phone" placeholder="Ваш телефон" type="number" />
+          <input name="phone" placeholder="Ваш телефон"/>
           <input name="email" placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">заказать консультацию</button>
@@ -677,14 +672,9 @@
         <div class="modal__subtitle">Ваш заказ:</div>
         <div class="modal__descr">Пульсометр Polar FT1</div>
         <form class="feed-form feed-form_mt25" action="#">
-          <input name="name" required placeholder="Ваше имя" type="text" />
-          <input
-            name="phone"
-            required
-            placeholder="Ваш телефон"
-            type="number"
-          />
-          <input name="email" required placeholder="Ваш E-mail" type="email" />
+          <input name="name" placeholder="Ваше имя" type="text" />
+          <input name="phone" placeholder="Ваш телефон"/>
+          <input name="email" placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">Купить</button>
         </form>
@@ -709,6 +699,7 @@
     ></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
 
     <script src="js/script.js"></script>
   </body>
