--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>RunSmart</title>
 
+    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/fonts.css" />
 
@@ -113,7 +114,7 @@
         </div>
         <form id="consultation-form" class="feed-form" action="#">
           <input name="name" placeholder="Ваше имя" type="text" />
-          <input name="phone" placeholder="Ваш телефон"/>
+          <input name="phone" placeholder="Ваш телефон" />
           <input name="email" placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">заказать консультацию</button>
@@ -659,7 +660,7 @@
         <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
         <form class="feed-form feed-form_mt25" action="#">
           <input name="name" placeholder="Ваше имя" type="text" />
-          <input name="phone" placeholder="Ваш телефон"/>
+          <input name="phone" placeholder="Ваш телефон" />
           <input name="email" placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">заказать консультацию</button>
@@ -673,7 +674,7 @@
         <div class="modal__descr">Пульсометр Polar FT1</div>
         <form class="feed-form feed-form_mt25" action="#">
           <input name="name" placeholder="Ваше имя" type="text" />
-          <input name="phone" placeholder="Ваш телефон"/>
+          <input name="phone" placeholder="Ваш телефон" />
           <input name="email" placeholder="Ваш E-mail" type="email" />
 
           <button class="button button_submit">Купить</button>
@@ -693,10 +694,7 @@
     <!-- /overlay -->
 
     <!-- ================ scripts ================ -->
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.mask.min.js"></script>
