Smooth scroll and pageup

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <section class="promo">
+    <section id="up" class="promo">
       <div class="container">
         <header class="header">
           <a href="#" class="header__logo">
@@ -692,6 +692,10 @@
       <!-- /modal order -->
     </div>
     <!-- /overlay -->
+
+    <a href="#up" class="pageup">
+      <img src="icon/circle-up-solid.svg" alt="">
+    </a>
 
     <!-- ================ scripts ================ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
