--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
               </div>
             </div>
             <div class="benefits__item">
-              <img src="icon/heart.png" alt="heart" class="benefits__img" />
+              <img src="icon/heart.png" alt="heart" class="benefits__img benefits__img_animated" />
               <div class="benefits__subtittle">Заботимся о здоровье</div>
               <div class="benefits__desc">
                 Мы работаем для того, чтобы Ваши занятия спортом шли на пользу
