wow.js and animation.css

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/fonts.css" />
 
     <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/animate.css">
 
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
@@ -70,7 +71,7 @@
           <div class="benefits__title">НАШИ ПРЕИМУЩЕСТВА</div>
           <div class="benefits__items">
             <div class="benefits__item">
-              <img src="icon/cup.png" alt="cup" class="benefits__img" />
+              <img src="icon/cup.png" alt="cup" class="benefits__img animate__animated animate__jackInTheBox animate__slow animate__infinite	infinite" />
               <div class="benefits__subtittle">Делимся опытом</div>
               <div class="benefits__desc">
                 Наши сотрудники всегда готовы поделиться своим опытом, так как
@@ -87,7 +88,7 @@
               </div>
             </div>
             <div class="benefits__item">
-              <img src="icon/shoe.png" alt="shoe" class="benefits__img" />
+              <img src="icon/shoe.png" alt="shoe" class="benefits__img animate__animated animate__lightSpeedInLeft animate__slow animate__infinite	infinite" />
               <div class="benefits__subtittle">Учим бегать</div>
               <div class="benefits__desc">
                 Помогаем с обучением правильной технике бега! Дружим с
@@ -542,7 +543,7 @@
       <div class="container">
         <div class="reviews__title">отзывы клиентов</div>
         <div class="reviews__items">
-          <div class="reviews-item">
+          <div class="reviews-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay="1s">
             <div class="reviews-item__round">
               <img
                 src="img/rev/photo_1.png"
@@ -565,7 +566,7 @@
               </div>
             </div>
           </div>
-          <div class="reviews-item">
+          <div class="reviews-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay="1s">
             <div class="reviews-item__round">
               <img
                 src="img/rev/photo_2.png"
@@ -593,7 +594,7 @@
               </div>
             </div>
           </div>
-          <div class="reviews-item">
+          <div class="reviews-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay="1s">
             <div class="reviews-item__round">
               <img
                 src="img/rev/photo_3.png"
@@ -702,6 +703,7 @@
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.mask.min.js"></script>
+    <script src="js/wow.min.js"></script>
 
     <script src="js/script.js"></script>
   </body>
