--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RunSmart</title>
 
-    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/fonts.css" />
 
     <link rel="stylesheet" href="css/slick.css" />
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/animate.css" />
 
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
@@ -68,10 +68,14 @@
     <section class="benefits">
       <div class="container">
         <div class="benefits__wrapper">
-          <div class="benefits__title">НАШИ ПРЕИМУЩЕСТВА</div>
+          <h2 class="benefits__title">НАШИ ПРЕИМУЩЕСТВА</h2>
           <div class="benefits__items">
             <div class="benefits__item">
-              <img src="icon/cup.png" alt="cup" class="benefits__img animate__animated animate__jackInTheBox animate__slow animate__infinite	infinite" />
+              <img
+                src="icon/cup.png"
+                alt="cup"
+                class="benefits__img animate__animated animate__jackInTheBox animate__slow animate__infinite infinite"
+              />
               <div class="benefits__subtittle">Делимся опытом</div>
               <div class="benefits__desc">
                 Наши сотрудники всегда готовы поделиться своим опытом, так как
@@ -80,7 +84,11 @@
               </div>
             </div>
             <div class="benefits__item">
-              <img src="icon/heart.png" alt="heart" class="benefits__img benefits__img_animated" />
+              <img
+                src="icon/heart.png"
+                alt="heart"
+                class="benefits__img benefits__img_animated"
+              />
               <div class="benefits__subtittle">Заботимся о здоровье</div>
               <div class="benefits__desc">
                 Мы работаем для того, чтобы Ваши занятия спортом шли на пользу
@@ -88,7 +96,11 @@
               </div>
             </div>
             <div class="benefits__item">
-              <img src="icon/shoe.png" alt="shoe" class="benefits__img animate__animated animate__lightSpeedInLeft animate__slow animate__infinite	infinite" />
+              <img
+                src="icon/shoe.png"
+                alt="shoe"
+                class="benefits__img animate__animated animate__lightSpeedInLeft animate__slow animate__infinite infinite"
+              />
               <div class="benefits__subtittle">Учим бегать</div>
               <div class="benefits__desc">
                 Помогаем с обучением правильной технике бега! Дружим с
@@ -105,10 +117,10 @@
 
     <section class="consultation">
       <div class="container">
-        <div class="consultation__title">
+        <h2 class="consultation__title">
           Получите бесплатную консультацию<br />
           по подбору пульсометра
-        </div>
+        </h2>
         <div class="consultation__descr">
           Просто заполните форму заявки<br />
           и мы перезвоним вам в течении 10 минут
@@ -124,7 +136,7 @@
     </section>
     <!-- /consultation -->
 
-    <section class="carousel">
+    <div class="carousel">
       <div class="container">
         <div class="carousel__inner">
           <div>
@@ -138,12 +150,12 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
     <!-- /.carousel -->
 
     <section class="catalog">
       <div class="container">
-        <div class="catalog__title">Каталог пульсометров</div>
+        <h2 class="catalog__title">Каталог пульсометров</h2>
         <ul class="catalog__tabs">
           <li class="catalog__tab catalog__tab_active">
             <div>Для фитнеса</div>
@@ -541,9 +553,13 @@
 
     <section class="reviews">
       <div class="container">
-        <div class="reviews__title">отзывы клиентов</div>
+        <h2 class="reviews__title">отзывы клиентов</h2>
         <div class="reviews__items">
-          <div class="reviews-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay="1s">
+          <div
+            class="reviews-item animate__animated animate__fadeInUp wow"
+            data-wow-duration="1s"
+            data-wow-delay="1s"
+          >
             <div class="reviews-item__round">
               <img
                 src="img/rev/photo_1.png"
@@ -566,7 +582,11 @@
               </div>
             </div>
           </div>
-          <div class="reviews-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay="1s">
+          <div
+            class="reviews-item animate__animated animate__fadeInUp wow"
+            data-wow-duration="1s"
+            data-wow-delay="1s"
+          >
             <div class="reviews-item__round">
               <img
                 src="img/rev/photo_2.png"
@@ -594,7 +614,11 @@
               </div>
             </div>
           </div>
-          <div class="reviews-item animate__animated animate__fadeInUp wow" data-wow-duration="1s" data-wow-delay="1s">
+          <div
+            class="reviews-item animate__animated animate__fadeInUp wow"
+            data-wow-duration="1s"
+            data-wow-delay="1s"
+          >
             <div class="reviews-item__round">
               <img
                 src="img/rev/photo_3.png"
@@ -630,8 +654,6 @@
 
     <footer class="footer">
       <script
-        type="text/javascript"
-        charset="utf-8"
         async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A652293dd07f527bc3b63889f1995f0d1d6af0df3fb58de87d4034d69a14547f2&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=falce"
       ></script>
@@ -695,7 +717,7 @@
     <!-- /overlay -->
 
     <a href="#up" class="pageup">
-      <img src="icon/circle-up-solid.svg" alt="">
+      <img src="icon/circle-up-solid.svg" alt="" />
     </a>
 
     <!-- ================ scripts ================ -->
