--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RunSmart</title>
-
-    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon" />
+    
+    <link rel="icon" href="img/favicon.ico" type="image/svg+xml">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/fonts.css" />
 
