--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
           </button>
           <div class="promo__link">
             или
-            <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+            <a href="#catalog">ПЕРЕЙТИ В КАТАЛОГ</a>
           </div>
         </div>
         <!-- /promo__wrapper -->
@@ -153,7 +153,7 @@
     </div>
     <!-- /.carousel -->
 
-    <section class="catalog">
+    <section class="catalog" id="catalog">
       <div class="container">
         <h2 class="catalog__title">Каталог пульсометров</h2>
         <ul class="catalog__tabs">
