--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RunSmart</title>
-    
-    <link rel="icon" href="img/favicon.ico" type="image/svg+xml">
+
+    <!-- Primary Meta Tags -->
+<title>RunSmart</title>
+<meta name="title" content="RunSmart">
+<meta name="description" content="Подбор пульсометра с учётом Вашего уровня подготовки">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://lyutik13.ru/">
+<meta property="og:title" content="RunSmart">
+<meta property="og:description" content="Подбор пульсометра с учётом Вашего уровня подготовки">
+<meta property="og:image" content="img/RunSmart-min.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://lyutik13.ru/">
+<meta property="twitter:title" content="RunSmart">
+<meta property="twitter:description" content="Подбор пульсометра с учётом Вашего уровня подготовки">
+<meta property="twitter:image" content="img/RunSmart-min.png">
+
+<link rel="apple-touch-icon" sizes="180x180" href="icon/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon/favicon-16x16.png">
+<link rel="manifest" href="icon/favicon/site.webmanifest">
+<link rel="mask-icon" href="icon/favicon/safari-pinned-tab.svg" color="#933e3e">
+<meta name="msapplication-TileColor" content="#933e3e">
+<meta name="theme-color" content="#933e3e">
+
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/fonts.css" />
 
